Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,10 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "6523833226:AAG91OVSd2CjrSmRGDouLiXF5gdtfECeGIM"                              # Require restart after changing it while bot running
+OWNER_ID = "1281749717"                               # Require restart after changing it while bot running
+TELEGRAM_API = "8802706"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "97546900397a98f481bfb8252b1ac4f4"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
@@ -16,15 +14,14 @@ STATUS_LIMIT = "10"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
-FILELION_API = ""
-STREAMWISH_API = ""
+UPTOBOX_TOKEN = ""
 EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = "False"
 YT_DLP_OPTIONS = ""
 USE_SERVICE_ACCOUNTS = "False"
 # GDrive Tools
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = "False"
+GDRIVE_ID = "1uhmzql9256OmLDqUtWWA2S4k9QzmljZq"
+IS_TEAM_DRIVE = "True"
 STOP_DUPLICATE = "False"
 INDEX_URL = ""
 # Rclone
@@ -42,13 +39,12 @@ LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
-USER_TRANSMISSION = "False"
 LEECH_FILENAME_PREFIX = ""
 LEECH_DUMP_CHAT = ""
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
 BASE_URL = ""
-BASE_URL_PORT = ""
+BASE_URL_PORT = "80"
 WEB_PINCODE = "False"
 #Queueing system
 QUEUE_ALL = ""
